syntax = "proto3";

option csharp_namespace = "SharedKernel.Protos";

package property.service;

service PropertyService {
  rpc GetProperty (GetPropertyRequest) returns (GetPropertyResponse);
}

message GetPropertyRequest {
  string id = 1;
}

message GetPropertyResponse {
  string id = 1;
  string title = 2;
  string listing_type = 3;
  optional string rent_period = 4;
  double price = 5;
  string currency_unit = 6;
  string owner_id = 7;
}
